# sfct

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
docs/uml_models/WindowMTSystem/iWindow/: iWindow_class_model.puml  iWindow_process.puml  iWindow_state.puml  iWindow_uml.puml
docs/uml_models/mgui/: mgui_uml.puml
docs/uml_models/w32main_app/: w32fileparse_model.puml  w32fileparse_process.puml  w32queue_system_model.puml
docs/uml_models/w32main_app/w32directorysignal/: w32directorysignal_process.puml  w32directorysignal_state.puml  w32directorysignal_uml.puml
docs/uml_models/w32main_app/w32queue_system/: w32queue_system_process.puml  w32queue_system_uml.puml
linux/mgui/: mgui_element.hpp
linux/opengl/soil2/: soil2-debug.lib
linux/src/: lxspecific.cpp  lxspecific.hpp
src/: AppMacros.hpp  ConsoleApp.cpp  ConsoleApp.hpp  ConsoleTM.cpp  ConsoleTM.hpp  DirectorySignal.cpp  DirectorySignal.hpp  FastFileCopy.cpp  FastFileCopy.hpp  FileCopy.cpp  FileCopy.hpp  FileParse.cpp  FileParse.hpp  Helper.hpp  TM.cpp  TM.hpp  WinHelper.hpp  args.hpp  benchmark.cpp  benchmark.hpp  constants.hpp  directory_copy.cpp  directory_copy.hpp  directory_sync.cpp  directory_sync.hpp  logger.cpp  logger.hpp  main.cpp  obj.hpp  queue_system.hpp  sfct_api.cpp  sfct_api.hpp  timer.cpp  timer.hpp  windows_helper.hpp
src/app/: ConsoleApp.hpp  DirectorySignal.hpp  FileParse.hpp  TM.hpp  benchmark.hpp  constants.hpp  main.cpp  obj.hpp  sfct_api.cpp  sfct_api.hpp  timer.hpp  windows_helper.hpp
src/gui/: element.hpp
src/logger/: logger.hpp
src/opengl/glew/: glew-shared.lib  glew-sharedd.lib
src/opengl/glfw/: glfw3-d.lib  glfw3.lib
win32/: sfct.exe.manifest
win32/WindowMTSystem/includes/: WindowDimensions.hpp  WindowResources.hpp  iWindow.hpp  resource.h
win32/WindowMTSystem/resources/: Example2.rc
win32/WindowMTSystem/src/: WindowDimensions.cpp  WindowResources.cpp  iWindow.cpp
win32/main_app/includes/: w32appmacros.hpp  w32consoleapp.hpp  w32constants.hpp  w32cpplib.hpp  w32directorycopy.hpp  w32logger.hpp  w32specific_api.hpp
win32/main_app/src/: w32benchmark.cpp  w32consoletm.cpp  w32cpplib.cpp  w32fileparse.cpp  w32logger.cpp  w32sfct_api.cpp  w32tm.cpp
win32/mgui/includes/: mgui_api.hpp  mgui_box_border.hpp  mgui_box_button.hpp  mgui_box_element.hpp  mgui_button.hpp  mgui_d2d1_init.hpp  mgui_direct_write.hpp  mgui_direct_write_init.hpp  mgui_element.hpp  mgui_round_element.hpp  mgui_rounded_box_element.hpp  mgui_selector.hpp
win32/mgui/src/: mgui_api.cpp  mgui_box_border.cpp  mgui_box_button.cpp  mgui_box_element.cpp  mgui_button.cpp  mgui_d2d1_init.cpp  mgui_direct_write.cpp  mgui_direct_write_init.cpp  mgui_element.cpp  mgui_round_element.cpp  mgui_rounded_box_element.cpp  mgui_selector.cpp
win32/src/: w32appmacros.hpp  w32args.hpp  w32benchmark.cpp  w32benchmark.hpp  w32consoleapp.cpp  w32consoleapp.hpp  w32consoletm.cpp  w32consoletm.hpp  w32constants.hpp  w32directorycopy.cpp  w32directorycopy.hpp  w32directorysignal.cpp  w32directorysignal.hpp  w32fileparse.cpp  w32fileparse.hpp  w32logger.cpp  w32logger.hpp  w32main.cpp  w32obj.hpp  w32queue_system.hpp  w32sfct_api.cpp  w32sfct_api.hpp  w32specific_api.cpp  w32specific_api.hpp  w32timer.cpp  w32timer.hpp  w32tm.cpp  w32tm.hpp
